linhas 23-24 comentado a li do instagram, linha 34-35 adicionado caminho e configurado nova aba para link do currículo, linhas 46-51 descrição do projeto, 53-54 alterado o posicionamento dos projetos, linhas 58-63 alterado h3 e p com descrição do projeto, alterado linhas 70-75 h3 e p com descrição do projeto que foi alterado o posicionamento, linhas 77-78 aleterado os links

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="https://github.com/Elton-Prazeres" target="_blank"><i class="fa-brands fa-github"></i></a>
                 </li>
                 <li><a href="https://www.linkedin.com/in/elton-prazeres-31404b91/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-                <li><a href="https://www.instagram.com/ehpdev/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                <!-- <li><a href="https://www.instagram.com/ehpdev/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li> -->
             </ul>
         </nav>
     </header>
@@ -31,7 +31,7 @@
             <h1 id="typing">Elton Prazeres</h1>
             <div class="buttons">
                 <a href="https://api.whatsapp.com/send?phone=081997829578" target="_blank" class="btn-wa">WhatsApp</a>
-                <a href="curriculo.pdf" download class="btn-cv">Currículo</a>
+                <a href="https://drive.google.com/file/d/1OlZovQoCfJxhAjNTSmrr28wpFFpqlSAc/view?usp=drive_link" target="_blank" download class="btn-cv">Currículo</a>
             </div>
             <p>Amo tecnologia e seus caminhos, busco aprender e me desenvolver, sempre que o desafio envolve uma maneira de colocar meus conhecimentos a prova, procuro extrair aprendizado ao máximo, para que possa cada vez mais subir um degrau de cada vez.</p>
             <div class="tecnologias">
@@ -43,24 +43,39 @@
             <h2>Projetos</h2>
             <div class="grid">
                 <div class="projeto">
-                    Huddle - Frontend-Mentor
+                    <h3>Portfólio</h3>
+                    <p>Utilizado tecnologias HTML, CSS, JavaScript
+                    HTML estruturar semântica e classes coerentes 
+                    CSS separação de funcionalidades por abas para facilitar
+                    manutenção e estilização de forma linear. 
+                    JAVASCRIPT efeito Typing</p> 
                     <div class="buttons">
-                        <a href="https://elton-prazeres.github.io/Huddle/" target="_blank" class="btn">Site</a>
-                        <a href="https://github.com/Elton-Prazeres/Huddle" target="_blank" class="btn">Código</a>
+                        <a href="https://elton-prazeres.github.io/Portfolio/" target="_blank" class="btn">Site</a>
+                        <a href="https://github.com/Elton-Prazeres/Portfolio/" target="_blank" class="btn">Código</a>
                     </div>
                 </div>
                 <div class="projeto">
-                    Fylo - Frontend-Mentor
+                    <h3>Fylo - Frontend-Mentor</h3>
+                    <p>Desafio do Frontend Mentor não assistido (próprio)
+                    Utilizado tecnologias HTML, CSS,
+                    HTML estruturação de semântica e classes coerentes
+                    CSS separar as funcionalidades por abas para facilitar
+                    manutenção,</p>
                     <div class="buttons">
                         <a href="#" class="btn">Site</a>
                         <a href="https://github.com/Elton-Prazeres/Fylo" target="_blank" class="btn">Código</a>
                     </div>
                 </div>
                 <div class="projeto">
-                    Em breve
+                    <h3>Huddle - Frontend-Mentor</h3>
+                    <p>Desafio do curso e do Frontend Mentor assistido em sugestão
+                    Utilizado tecnologias HTML, CSS
+                    HTML estruturação de semântica e classes coerentes
+                    CSS separar as funcionalidades por abas (responsividade,
+                    estilos, reset)</p>
                     <div class="buttons">
-                        <a href="#" class="btn">Site</a>
-                        <a href="#" class="btn">Código</a>
+                        <a href="https://elton-prazeres.github.io/Huddle/" target="_blank" class="btn">Site</a>
+                        <a href="https://github.com/Elton-Prazeres/Huddle" target="_blank" class="btn">Código</a>
                     </div>
                 </div>
                 <div class="projeto">
@@ -80,7 +95,6 @@
         <ul>
             <li><a href="https://github.com/Elton-Prazeres" target="_blank"><i class="fa-brands fa-github"></i></a></li>
             <li><a href="https://www.linkedin.com/in/elton-prazeres-31404b91/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-            <li><a href="https://www.instagram.com/ehpdev/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
         </ul>
         
         
