adicionado linha 9 link c/ fonts, linha 14 link responsive, linhas 40-47 icones de tecnologias, linhas 56-57 59-60 69-70 e 72 receberam <br>

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio - EltonPrazeres</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="src/css/fonts.css">
     <link rel="stylesheet" href="src/css/variables.css">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="shortcut icon" href="src/images/favicon-elton-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="src/css/resonsive.css">
 </head>
 
 <body>
@@ -35,7 +37,14 @@
             </div>
             <p>Amo tecnologia e seus caminhos, busco aprender e me desenvolver, sempre que o desafio envolve uma maneira de colocar meus conhecimentos a prova, procuro extrair aprendizado ao máximo, para que possa cada vez mais subir um degrau de cada vez.</p>
             <div class="tecnologias">
-                HTML5 - CSS3 - JavaScript - Git - GitHub - Node.js - React.js - JavaScript Typescript
+                <i class="fab fa-html5" title="HTML5"></i>
+                <i class="fab fa-css3-alt" title="CSS3"></i>
+                <i class="fab fa-git-square" title="Git"></i>
+                <i class="fab fa-github-square" title="GitHub"></i>
+                ...estudando
+                <i class="fab fa-js-square" title="JavaScript"></i>
+                <i class="fab fa-react" title="React"></i>
+                <i class="fab fa-node-js" title="Node.js"></i>
             </div>
         </section>
 
@@ -44,11 +53,11 @@
             <div class="grid">
                 <div class="projeto">
                     <h3>Portfólio</h3>
-                    <p>Utilizado tecnologias HTML, CSS, JavaScript
-                    HTML estruturar semântica e classes coerentes 
+                    <p>Utilizado tecnologias HTML, CSS, JavaScript<br>
+                    HTML estruturado semântica e classes coerentes<br>
                     CSS separação de funcionalidades por abas para facilitar
-                    manutenção e estilização de forma linear. 
-                    JAVASCRIPT efeito Typing</p> 
+                    manutenção e estilização de forma linear.<br>
+                    JAVASCRIPT efeito Typing.</p> 
                     <div class="buttons">
                         <a href="https://elton-prazeres.github.io/Portfolio/" target="_blank" class="btn">Site</a>
                         <a href="https://github.com/Elton-Prazeres/Portfolio/" target="_blank" class="btn">Código</a>
@@ -57,10 +66,10 @@
                 <div class="projeto">
                     <h3>Fylo - Frontend-Mentor</h3>
                     <p>Desafio do Frontend Mentor não assistido (próprio)
-                    Utilizado tecnologias HTML, CSS,
-                    HTML estruturação de semântica e classes coerentes
+                    Utilizado tecnologias HTML, CSS,<br>
+                    HTML estruturação de semântica e classes coerentes<br>
                     CSS separar as funcionalidades por abas para facilitar
-                    manutenção,</p>
+                    manutenção.</p>
                     <div class="buttons">
                         <a href="#" class="btn">Site</a>
                         <a href="https://github.com/Elton-Prazeres/Fylo" target="_blank" class="btn">Código</a>
