--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="shortcut icon" href="src/images/favicon-elton-32x32.png" type="image/x-icon">
-    <link rel="stylesheet" href="src/css/resonsive.css">
+    <link rel="stylesheet" href="src/css/responsive.css">
 </head>
 
 <body>
