adicionado <br> nas linhas 68 e 80

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="projeto">
                     <h3>Fylo - Frontend-Mentor</h3>
-                    <p>Desafio do Frontend Mentor não assistido (próprio)
+                    <p>Desafio do Frontend Mentor não assistido (próprio)<br>
                     Utilizado tecnologias HTML, CSS,<br>
                     HTML estruturação de semântica e classes coerentes<br>
                     CSS separar as funcionalidades por abas para facilitar
@@ -77,7 +77,7 @@
                 </div>
                 <div class="projeto">
                     <h3>Huddle - Frontend-Mentor</h3>
-                    <p>Desafio do curso e do Frontend Mentor assistido em sugestão
+                    <p>Desafio do curso e do Frontend Mentor assistido em sugestão<br>
                     Utilizado tecnologias HTML, CSS
                     HTML estruturação de semântica e classes coerentes
                     CSS separar as funcionalidades por abas (responsividade,
