adicionado linhas 38 e 40, classe about na div contendo o paragrafo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                 <a href="https://api.whatsapp.com/send?phone=081997829578" target="_blank" class="btn-wa">WhatsApp</a>
                 <a href="https://drive.google.com/file/d/1OlZovQoCfJxhAjNTSmrr28wpFFpqlSAc/view?usp=drive_link" target="_blank" download class="btn-cv">Currículo</a>
             </div>
+            <div class="about">
             <p>Amo tecnologia e seus caminhos, busco aprender e me desenvolver, sempre que o desafio envolve uma maneira de colocar meus conhecimentos a prova, procuro extrair aprendizado ao máximo, para que possa cada vez mais subir um degrau de cada vez.</p>
+            </div>
             <div class="tecnologias">
                 <i class="fab fa-html5" title="HTML5"></i>
                 <i class="fab fa-css3-alt" title="CSS3"></i>
