--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h1 id="typing">Elton Prazeres</h1>
             <div class="buttons">
                 <a href="https://api.whatsapp.com/send?phone=081997829578" target="_blank" class="btn-wa">WhatsApp</a>
-                <a href="https://drive.google.com/file/d/1OlZovQoCfJxhAjNTSmrr28wpFFpqlSAc/view?usp=drive_link" target="_blank" download class="btn-cv">Currículo</a>
+                <a href="https://drive.google.com/drive/folders/1w1BBi43UbfhYkJH8iGMQKV2dU4CSEbO0?usp=sharing" target="_blank" download class="btn-cv">Currículo</a>
             </div>
             <div class="about">
             <p>Amo tecnologia e seus caminhos, busco aprender e me desenvolver, sempre que o desafio envolve uma maneira de colocar meus conhecimentos a prova, procuro extrair aprendizado ao máximo, para que possa cada vez mais subir um degrau de cada vez.</p>
