adicionado linha 42 icone VsCode, linha 47 icone Terminal, linha 52 e 53 icones php e sql

--- a/index.html
+++ b/index.html
@@ -39,14 +39,18 @@
             <p>Amo tecnologia e seus caminhos, busco aprender e me desenvolver, sempre que o desafio envolve uma maneira de colocar meus conhecimentos a prova, procuro extrair aprendizado ao máximo, para que possa cada vez mais subir um degrau de cada vez.</p>
             </div>
             <div class="tecnologias">
+                <i class="fas fa-code" title="VsCode"></i>
                 <i class="fab fa-html5" title="HTML5"></i>
                 <i class="fab fa-css3-alt" title="CSS3"></i>
                 <i class="fab fa-git-square" title="Git"></i>
                 <i class="fab fa-github-square" title="GitHub"></i>
+                <i class="fas fa-terminal" title="Terminal"></i>
                 ...estudando
                 <i class="fab fa-js-square" title="JavaScript"></i>
                 <i class="fab fa-react" title="React"></i>
                 <i class="fab fa-node-js" title="Node.js"></i>
+                <i class="fa-brands fa-php" title="PHP"></i>
+                <i class="fas fa-database" title="SQL"></i></i>
             </div>
         </section>
 
