--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <i class="fab fa-node-js" title="Node.js"></i>
                 <i class="fa-brands fa-php" title="PHP"></i>
                 <i class="fas fa-database" title="SQL"></i></i>
+                <i class="fa-brands fa-bootstrap" title="Bootstrap"></i>
             </div>
         </section>
 
