adicionado linhas 25-27 div.trilho+div.indicador, linha 121 alterado nome do arquivo para typing que é a função do arquivo JS, linha 122 adicionado link para o arquivo JS change

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <li><a href="https://github.com/Elton-Prazeres" target="_blank"><i class="fa-brands fa-github"></i></a>
                 </li>
                 <li><a href="https://www.linkedin.com/in/elton-prazeres-31404b91/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-                <!-- <li><a href="https://www.instagram.com/ehpdev/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li> -->
+                <div class="trilho" id="trilho">
+                    <div class="indicador"></div>
+                </div>
             </ul>
         </nav>
     </header>
@@ -116,7 +118,8 @@
         
     </footer>
 
-    <script src="src/js/index.js" type="text/javascript"></script>
+    <script src="src/js/typing.js" type="text/javascript"></script>
+    <script src="src/js/chnage.js"></script>
 </body>
 
 </html>
