--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </footer>
 
     <script src="src/js/typing.js" type="text/javascript"></script>
-    <script src="src/js/chnage.js"></script>
+    <script src="src/js/change.js"></script>
 </body>
 
 </html>
